--- a/style.css
+++ b/style.css
@@ -335,10 +335,10 @@ background-position: bottom;}
   background-image:url("Images/piece-10.jpg");
 }
 #piece-11 {
-  background-image: url("Images/piece-11.jpg");
+  background-image: url("Images/piece-11.JPG");
 }
 #piece-12 {
-  background-image: url("Images/piece-12.jpg");
+  background-image: url("Images/piece-12.JPG");
 }
 #piece-13 {
   background-image: url("Images/piece-13.jpg");
