--- a/style.css
+++ b/style.css
@@ -266,6 +266,21 @@ transform: translateY(10px)}
   }
   #food-28 {
     background-image: url("Images/food-28.jpg");
+  }
+  #food-29 {
+    background-image: url("Images/food-29.jpg");
+  }
+  #food-30 {
+    background-image: url("Images/food-30.jpg");
+  }
+  #food-31 {
+    background-image: url("Images/food-31.jpg");
+  }
+  #food-32 {
+    background-image: url("Images/food-32.jpg");
+  }
+  #food-33 {
+    background-image: url("Images/food-33.jpg");
 
 background-position: bottom;}
 
